--- a/Animes_News/site-plan.html
+++ b/Animes_News/site-plan.html
@@ -124,7 +124,6 @@
         Content
       </h2>
       <h3>Home page</h3>
-      <p>What is Anime?</p>
       <p>Anime, an abbreviation for animation in Japanese, is animated images rooted in Japan. It also includes television animation series, films, OVA (original video animation) put on DVDs and Blu-ray Discs and a variety of other forms of animated works. Anime is also deeply concerned with Japanese comic books known as Manga since lots of modern anime are created based on them.</p>
       <p>The number of new anime titles is increasing year after year partly because of diversification of the ways of making them. In addition to traditional hand-drawn animations, more digital anime used with computer graphics have been made recently.</p>
       <p>A style of the modern anime has its origin in Japanese animations around the 1960s, when the first successful television anime series Astro Boy was produced by Osamu Tezuka, the Father of Manga. Since the 2000s, a large number of low-budget but high-quality anime series have aired especially during late night hours.</p>
@@ -132,16 +131,16 @@
       <p>Whether its breaking anime news on international hits or exciting updates on the niche manga, Animes News has your inner Otaku covered</p>
       
       <p>Images for the Home page</p>
-        <img src="images/group-anime-girls_24640-79440.jpg" alt="group-anime-girls_24640-79440">
-        <img src="images/bruce-tang-nKO_1QyFh9o-unsplash (1).jpg" alt="gundam statue model">
+        <img src="images/rsz_1top-anime-fall-2022.jpg" alt="top anime fall 2022">
+        <img src="images/Chainsaw Man.jpg" alt="Chainsaw Man poster">
 
       </ul>
       <h3>Anime Rankings</h3>
-      <p>More anime series and movies have been released every season for this decade, and you can expect tens of the new finest-quality anime this year as well. For every anime fan including beginners and advanced watchers, this page introduces the highest-ranked in a lot of categories (seasonal animes, animes of the year, adventure animes, animes of all times, etc) which we recommended to watch on various global platforms such as Netflix, Crunchyroll, Amazon Prime Video, Hulu, etc. For those who are wondering what to watch this year, this page offers nice recommendations to watch right now! This page will be full of anime rankings to see and choose from. Browse the highest-ranked anime on Animes News and find top TV series, movies, and Ovas right here!</p>
+      <p>More anime series and movies have been released every season for this decade, and you can expect tens of the new finest-quality anime this year as well. For every anime fan including beginners and advanced watchers, this page introduces the highest-ranked animes in a lot of categories (seasonal animes, animes of the year, adventure animes, animes of all times, etc) which we recommend to watch on various global platforms such as Netflix, Crunchyroll, Amazon Prime Video, Hulu, etc. For those who are wondering what to watch this year, this page offers nice recommendations to watch right now! This page will be full of anime rankings to see and choose from. Browse the highest-ranked anime on Animes News and find top TV series, movies, and Ovas right here!</p>
 
       <p>Images for the Page 2</p>
         <img src="images/rsz_1anime-ranking-fall-2022.jpg" alt="Anime Ranking Fall 2022">
-        <img src="images/rsz_1top-anime-fall-2022.jpg" alt="top anime fall 2022">
+        <img src="images/Fullmetal Alchemist Brotherhood.jpg" alt="Fullmetal Alchemist Brotherhood poster">
 
       </ul>
       <h3>Anime Events</h3>
