--- a/wwr/index.html
+++ b/wwr/index.html
@@ -25,7 +25,7 @@
             
             <div id="hero">
                 <div id="hero-box">
-                    <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
+                    <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
                 </div>
                 
                 <section id="hero-msg">
