--- a/Animes_News/site-plan.html
+++ b/Animes_News/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Anime Rankings</a>
+        <a href="#">Anime Events</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Anime Rankings <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Animes Events  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,30 +124,37 @@
         Content
       </h2>
       <h3>Home page</h3>
-      <p>
-        [Written copy for the home page here]
-      </p>
+      <p>What is Anime?</p>
+      <p>Anime, an abbreviation for animation in Japanese, is animated images rooted in Japan. It also includes television animation series, films, OVA (original video animation) put on DVDs and Blu-ray Discs and a variety of other forms of animated works. Anime is also deeply concerned with Japanese comic books known as Manga since lots of modern anime are created based on them.</p>
+      <p>The number of new anime titles is increasing year after year partly because of diversification of the ways of making them. In addition to traditional hand-drawn animations, more digital anime used with computer graphics have been made recently.</p>
+      <p>A style of the modern anime has its origin in Japanese animations around the 1960s, when the first successful television anime series Astro Boy was produced by Osamu Tezuka, the Father of Manga. Since the 2000s, a large number of low-budget but high-quality anime series have aired especially during late night hours.</p>
+      <p>The rapid market growth in recent years has established the anime as part of composite art as well as literature, music and entertainment. Some renown anime directors including Hayao Miyazaki from Studio Ghibli and Makoto Shinkai have led the anime industry worldwide lately. The expanding Japanese pop culture are globally supported by the popularization of smartphones and tablets and diverse video streaming platforms.</p>
+      <p>Whether its breaking anime news on international hits or exciting updates on the niche manga, Animes News has your inner Otaku covered</p>
+      
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/group-anime-girls_24640-79440.jpg" alt="group-anime-girls_24640-79440">
+        <img src="images/bruce-tang-nKO_1QyFh9o-unsplash (1).jpg" alt="gundam statue model">
 
       </ul>
-      <h3>[Page 2]</h3>
-      <p>
-        [Written copy for the Page 2 here]
-      </p>
+      <h3>Anime Rankings</h3>
+      <p>More anime series and movies have been released every season for this decade, and you can expect tens of the new finest-quality anime this year as well. For every anime fan including beginners and advanced watchers, this page introduces the highest-ranked in a lot of categories (seasonal animes, animes of the year, adventure animes, animes of all times, etc) which we recommended to watch on various global platforms such as Netflix, Crunchyroll, Amazon Prime Video, Hulu, etc. For those who are wondering what to watch this year, this page offers nice recommendations to watch right now! This page will be full of anime rankings to see and choose from. Browse the highest-ranked anime on Animes News and find top TV series, movies, and Ovas right here!</p>
+
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/rsz_1anime-ranking-fall-2022.jpg" alt="Anime Ranking Fall 2022">
+        <img src="images/rsz_1top-anime-fall-2022.jpg" alt="top anime fall 2022">
 
       </ul>
-      <h3>[Page 3]</h3>
-      <p>
-        [Written copy for the Page 3 here]
-      </p>
+      <h3>Anime Events</h3>
+      <p>5 Largest Anime Events around the World</p>
+      <p>List of the best anime conventions held in the world</p>
+      <p>Lately, the island country Japan has been raised more attention from not just international keen travelers but a broader range of people who are interested in Japanese pop culture. There are some indigenous contents to Japan that have gained popularity worldwide: for example, anime, manga and light novels.</p>
+      <p>Especially, anime is now looked on as one of the hottest contents that are watched on various video streaming platforms such as Netflix, Hulu, Disney+ and so on. There are many large conventions related to anime and Japanese culture overseas these days. Some people join an exciting anime event held in their own countries. Others, who are enthusiatic anime geeks, come to the mecca of anime to have the authentic anime experiences.</p>
+      <p>For all anime fans all over the globe, here is the list of 5 largest anime events around the world. This anime event list will help you to attend the big event in your country or Japan if you make a plan to travel it. Check out the best places for anime lovers to visit now!</p>
+      <p>The largest anime events in the world around the world are AnimeJapan (Tokyo), Anime Expo (Los Angeles), Anime Matsuri (Houston), Japan Expo (Paris), Comic Market (Tokyo)</p>
+      
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/Worlds-Anime-Events-768x573.jpg" alt="Worlds Anime Events">
+        <img src="images/AnimeJapan-2022-768x474.jpg" alt="Anime Japan Poster">
 
       </ul>
       <hr>
