--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -122,7 +122,7 @@
 
     <h3>Rivers</h3>
 
-    <img src="images/Page 2 Wireframe.jpg" alt="page 2 wireframe">
+    <img src="images/Page 2 Wireframe (1).jpg" alt="Page 2 Wireframe">
   </main>
 </body>
 
