--- a/Animes_News/site-plan.html
+++ b/Animes_News/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/5f978168fc5240b8bef445b34118e3c4 (1).png" alt="Logo image">
+      <img src="images/Animes_News_Logo.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -87,9 +87,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Anime Rankings</a>
-        <a href="#">Anime Events</a>
+        <a href="index.html">Home</a>
+        <a href="anime-rankings.html">Anime Rankings</a>
+        <a href="anime-events.html">Anime Events</a>
       </nav>
       <hr>
       <h2>
@@ -132,7 +132,7 @@
       
       <p>Images for the Home page</p>
         <img src="images/rsz_1top-anime-fall-2022.jpg" alt="top anime fall 2022">
-        <img src="images/Chainsaw Man.jpg" alt="Chainsaw Man poster">
+        <img src="images/Chainsaw-Man.jpg" alt="Chainsaw Man poster">
 
       </ul>
       <h3>Anime Rankings</h3>
