Change some HTML

--- a/Animes_News/site-plan.html
+++ b/Animes_News/site-plan.html
@@ -140,7 +140,7 @@
 
       <p>Images for the Page 2</p>
         <img src="images/rsz_1anime-ranking-fall-2022.jpg" alt="Anime Ranking Fall 2022">
-        <img src="images/Fullmetal Alchemist Brotherhood.jpg" alt="Fullmetal Alchemist Brotherhood poster">
+        <img src="images/Fullmetal-Alchemist-Brotherhood.jpg" alt="Fullmetal Alchemist Brotherhood poster">
 
       </ul>
       <h3>Anime Events</h3>
@@ -173,7 +173,7 @@
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="images/Anime_Rankings_Wireframe.png" alt="page 2 wireframe">
+      <img src="images/Anime_Rankings_Wireframe_1.jpg" alt="page 2 wireframe">
 
       <h3>Anime Events</h3>
       <p>         
